chandeliers-lus/tests/warn/dead_code/unused-import.stderr
error: constant `X__lus_2_global` is never used
  --> tests/warn/dead_code/unused-import.rs:20:18
   |
20 |     extern const X : int;
   |                  ^
   |
note: the lint level is defined here
  --> tests/warn/dead_code/unused-import.rs:1:9
   |
1  | #![deny(dead_code)]
   |         ^^^^^^^^^

error: method `step` is never used
  --> tests/warn/dead_code/unused-import.rs:21:17
   |
21 |     extern node foo() returns ();
   |                 ^^^ method in this implementation
